# fastapi-argocd

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: local.yml
k8s/: deployment.yaml  ingress.yaml  service.yaml
src/app/: __init__.py  main.py
